--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </nav>
       <div class="container"> 
       
-      <h1> Sobre nossa pagina</h1>
+      <h1> Sobre nossa página</h1>
 
-      <h3> Nessa pagina iremos ver um pouco sobre o desenho Ben10, seus aliens e algumas curiosidades </h3>
+      <h3> Nessa página iremos ver um pouco sobre o desenho Ben10, seus aliens e algumas curiosidades </h3>
 
       <div class="container"> 
         <div class="item img1">
